haproxy-exp/dm-haproxy-exp.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: haproxy-exp
  namespace: exporters
  labels:
    app: haproxy-exp
    app.kubernetes.io/component: haproxy-exp
    app.kubernetes.io/instance: haproxy-exp
    app.kubernetes.io/part-of: haproxy-exp-app
    app.openshift.io/runtime-namespace: exporters
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-exp
  template:
    metadata:
      labels:
        app: haproxy-exp
    spec:
      containers:
        - name: haproxy-exp
          image: 'quay.io/prometheus/haproxy-exporter:latest'
          args:
            - '--haproxy.scrape-uri=http://user:pass@haproxy.example.com:7000/haproxy?stats;csv'
          ports:
            - containerPort: 9101
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 1Gi
          requests:
            cpu: 100m
            memory: 1Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
